# origin

./: CMakeLists.txt
Classes and objects/1HW/: CMakeLists.txt
Classes and objects/2HW/: 2HW.cpp
OOP Abstraction and Encapsulation/2HW/: 2HW.cpp
OOP inheritance and polymorphism/1HW/: 1HW.cpp  CMakeLists.txt
OOP inheritance and polymorphism/2HW/: 2HW.cpp  CMakeLists.txt
OOP inheritance and polymorphism/3HW/: 3HW.cpp  CMakeLists.txt
Structures and enumerations/2HW/: 2HW.cpp  CMakeLists.txt
Structures and enumerations/3HW/: 3HW.cpp  CMakeLists.txt
Классы и объекты/1HW/: 1HW.cpp
Классы и объекты/2HW/: 2HW.cpp
ООП. Абстракция и инкапсуляция/1HW/: 1HW.cpp
ООП. Абстракция и инкапсуляция/2HW/: 2HW.cpp
Структуры и перечисления/1HW/: 1HW.cpp
