cmake_minimum_required(VERSION 3.31)
project(Netologia)

set(CMAKE_CXX_STANDARD 20)

add_executable(Netologia main.cpp
        "Классы и объекты/1HW/1HW.cpp"
        "Классы и объекты/2HW/2HW.cpp"
        "Структуры и перечисления/1HW/1HW.cpp"
        "Структуры и перечисления/2HW/2HW.cpp"
        "Структуры и перечисления/3HW/3HW.cpp"
        "ООП. Абстракция и инкапсуляция/1HW/1HW.cpp"
        "ООП. Абстракция и инкапсуляция/2HW/2HW.cpp")
